--- a/package.json
+++ b/package.json
@@ -113,6 +113,9 @@
     ]
   },
   "babel": {
+    "plugins": [
+      "transform-decorators-legacy"
+    ],
     "presets": [
       "react-app"
     ]
