--- a/package.json
+++ b/package.json
@@ -113,13 +113,14 @@
   },
   "babel": {
     "plugins": [
-      "transform-decorators-legacy"
+      ["@babel/plugin-proposal-decorators", {"legacy": true}]
     ],
     "presets": [
       "react-app"
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.1.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.5"
   }
 }
