--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-proposal-decorators": "^7.1.2"
   }
 }
