--- a/package.json
+++ b/package.json
@@ -113,12 +113,8 @@
   },
   "babel": {
     "plugins": [
-      [
-        "@babel/plugin-proposal-decorators",
-        {
-          "legacy": true
-        }
-      ]
+      ["@babel/plugin-proposal-decorators", { "legacy": true } ],
+      ["@babel/plugin-proposal-class-properties", { "loose": true} ]
     ],
     "presets": [
       "react-app"
